--- a/web-app/tds/package.json
+++ b/web-app/tds/package.json
@@ -10,15 +10,15 @@
     "karma-unit-test": "node ./node_modules/gulp/bin/gulp.js --gulpfile ../../web-app/tds/gulpfile.js build-test-report"
   },
   "dependencies": {
-    "@angular/animations": "5.2.10",
-    "@angular/common": "5.2.10",
-    "@angular/compiler": "5.2.10",
-    "@angular/core": "5.2.10",
-    "@angular/forms": "5.2.10",
-    "@angular/http": "5.2.10",
-    "@angular/platform-browser": "5.2.10",
-    "@angular/platform-browser-dynamic": "5.2.10",
-    "@angular/router": "5.2.10",
+    "@angular/animations": "6.1.7",
+    "@angular/common": "6.1.7",
+    "@angular/compiler": "6.1.7",
+    "@angular/core": "6.1.7",
+    "@angular/forms": "6.1.7",
+    "@angular/http": "6.1.7",
+    "@angular/platform-browser": "6.1.7",
+    "@angular/platform-browser-dynamic": "6.1.7",
+    "@angular/router": "6.1.7",
     "@progress/kendo-angular-buttons": "4.0.0",
     "@progress/kendo-angular-dateinputs": "3.0.0",
     "@progress/kendo-angular-dialog": "3.4.0",
@@ -35,8 +35,6 @@
     "@progress/kendo-data-query": "1.3.0",
     "@progress/kendo-drawing": "1.5.3",
     "@progress/kendo-ooxml": "1.1.0",
-    "@uirouter/angular": "1.1.0",
-    "@uirouter/core": "5.0.20",
     "angular-in-memory-web-api": "0.6.0",
     "codemirror": "5.37.0",
     "core-js": "2.5.5",
@@ -55,6 +53,8 @@
     "@types/ramda": "0.25.24",
     "@types/webpack": "4.1.4",
     "ajv": "6.4.0",
+    "angular-router-loader": "^0.8.5",
+    "awesome-typescript-loader": "^5.2.1",
     "browserify": "16.2.0",
     "canonical-path": "0.0.2",
     "concurrently": "3.5.1",
@@ -86,7 +86,7 @@
     "watchify": "3.11.0",
     "webpack": "4.8.3",
     "webpack-bundle-analyzer": "2.11.1",
-    "webpack-dev-middleware": "3.1.3",
-    "webpack-cli": "2.0.15"
+    "webpack-cli": "2.0.15",
+    "webpack-dev-middleware": "3.1.3"
   }
 }
