--- a/web-app/tds/package.json
+++ b/web-app/tds/package.json
@@ -19,23 +19,23 @@
     "@angular/platform-browser": "6.1.7",
     "@angular/platform-browser-dynamic": "6.1.7",
     "@angular/router": "6.1.7",
-    "@progress/kendo-angular-buttons": "4.0.0",
-    "@progress/kendo-angular-dateinputs": "3.0.0",
-    "@progress/kendo-angular-dialog": "3.4.0",
-    "@progress/kendo-angular-dropdowns": "2.1.0",
-    "@progress/kendo-angular-excel-export": "1.0.7",
-    "@progress/kendo-angular-grid": "3.1.0",
-    "@progress/kendo-angular-inputs": "3.0.0",
-    "@progress/kendo-angular-intl": "1.4.0",
-    "@progress/kendo-angular-l10n": "1.1.0",
-    "@progress/kendo-angular-layout": "2.2.1",
-    "@progress/kendo-angular-popup": "2.2.0",
-    "@progress/kendo-angular-sortable": "1.0.8",
-    "@progress/kendo-angular-upload": "3.0.3",
-    "@progress/kendo-data-query": "1.3.0",
-    "@progress/kendo-drawing": "1.5.3",
-    "@progress/kendo-ooxml": "1.1.0",
-    "angular-in-memory-web-api": "0.6.0",
+    "@progress/kendo-angular-buttons": "4.1.3",
+    "@progress/kendo-angular-dateinputs": "3.4.4",
+    "@progress/kendo-angular-dialog": "3.7.0",
+    "@progress/kendo-angular-dropdowns": "3.0.3",
+    "@progress/kendo-angular-excel-export": "2.1.2",
+    "@progress/kendo-angular-grid": "3.7.1",
+    "@progress/kendo-angular-inputs": "3.2.1",
+    "@progress/kendo-angular-intl": "1.5.0",
+    "@progress/kendo-angular-l10n": "1.2.0",
+    "@progress/kendo-angular-layout": "3.1.2",
+    "@progress/kendo-angular-popup": "2.4.2",
+    "@progress/kendo-angular-sortable": "1.1.1",
+    "@progress/kendo-angular-upload": "4.1.4",
+    "@progress/kendo-data-query": "1.5.0",
+    "@progress/kendo-drawing": "1.5.7",
+    "@progress/kendo-ooxml": "1.1.4",
+    "angular-in-memory-web-api": "0.6.1",
     "codemirror": "5.37.0",
     "core-js": "2.5.5",
     "jquery": "3.3.1",
@@ -43,19 +43,21 @@
     "moment": "2.22.1",
     "moment-timezone": "0.5.21",
     "ramda": "0.25.0",
-    "rxjs": "5.5.2",
+    "rxjs": "6.3.2",
+    "rxjs-compat": "^6.3.2",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@progress/kendo-theme-default": "2.51.0",
-    "@types/jasmine": "2.8.6",
-    "@types/node": "10.0.0",
-    "@types/ramda": "0.25.24",
-    "@types/webpack": "4.1.4",
-    "ajv": "6.4.0",
-    "angular-router-loader": "^0.8.5",
-    "awesome-typescript-loader": "^5.2.1",
-    "browserify": "16.2.0",
+    "@progress/kendo-theme-default": "2.56.0",
+    "@types/jasmine": "2.8.8",
+    "@types/node": "10.9.4",
+    "@types/ramda": "0.25.38",
+    "@types/webpack": "4.4.11",
+    "@types/webpack-env": "^1.13.6",
+    "ajv": "6.5.3",
+    "angular-router-loader": "0.8.5",
+    "awesome-typescript-loader": "5.2.1",
+    "browserify": "16.2.2",
     "canonical-path": "0.0.2",
     "concurrently": "3.5.1",
     "gulp": "3.9.1",
@@ -77,16 +79,17 @@
     "karma-webpack": "3.0.0",
     "lite-server": "2.3.0",
     "lodash": "4.17.10",
+    "ng-router-loader": "^2.1.0",
     "protractor": "5.3.1",
     "ts-loader": "4.2.0",
     "ts-node": "6.0.1",
-    "tslint": "5.9.1",
+    "tslint": "5.11.0",
     "tslint-loader": "3.6.0",
     "typescript": "2.8.3",
     "watchify": "3.11.0",
-    "webpack": "4.8.3",
+    "webpack": "4.19.0",
     "webpack-bundle-analyzer": "2.11.1",
-    "webpack-cli": "2.0.15",
-    "webpack-dev-middleware": "3.1.3"
+    "webpack-cli": "3.1.0",
+    "webpack-dev-middleware": "3.3.0"
   }
 }
