TM-10993 POC - Lazy Loading Started on the Shared Module as the first change including RxJS update

--- a/web-app/tds/package.json
+++ b/web-app/tds/package.json
@@ -44,7 +44,7 @@
     "moment-timezone": "0.5.21",
     "ramda": "0.25.0",
     "rxjs": "6.3.2",
-    "rxjs-compat": "^6.3.2",
+    "rxjs-compat": "6.3.2",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
