TM-10993 POC - Lazy Loading - Created First Resolver to Use as Injectable Services - Cleaned the code in some classes - Cleaned the Package.json to to proper version to use now.

--- a/web-app/tds/package.json
+++ b/web-app/tds/package.json
@@ -2,7 +2,7 @@
   "name": "TDS-ANGULAR",
   "private": true,
   "version": "2.0.0",
-  "description": "TDS has upgrade is base code to use Angular 5, old version was using 1.6 and 1.3",
+  "description": "TDS has upgraded its base code to use Angular 6,",
   "author": "TransitionManager",
   "scripts": {
     "build-prod": "node ./node_modules/gulp/bin/gulp.js --gulpfile ../../web-app/tds/gulpfile.js sass-compiler --PROD & node ./node_modules/webpack/bin/webpack --profile --config ../../web-app/tds/webpack.config.js --env=prod",
@@ -56,7 +56,6 @@
     "@types/webpack-env": "^1.13.6",
     "ajv": "6.5.3",
     "angular-router-loader": "0.8.5",
-    "awesome-typescript-loader": "5.2.1",
     "browserify": "16.2.2",
     "canonical-path": "0.0.2",
     "concurrently": "3.5.1",
@@ -79,7 +78,6 @@
     "karma-webpack": "3.0.0",
     "lite-server": "2.3.0",
     "lodash": "4.17.10",
-    "ng-router-loader": "^2.1.0",
     "protractor": "5.3.1",
     "ts-loader": "5.2.1",
     "ts-node": "6.0.1",
