--- a/web-app/tds/package.json
+++ b/web-app/tds/package.json
@@ -49,13 +49,13 @@
   "devDependencies": {
     "@progress/kendo-theme-default": "2.57.0",
     "@types/jasmine": "2.8.8",
-    "@types/node": "10.9.4",
-    "@types/ramda": "0.25.38",
-    "@types/webpack": "4.4.11",
-    "@types/webpack-env": "^1.13.6",
-    "ajv": "6.5.3",
+    "@types/node": "10.11.4",
+    "@types/ramda": "0.25.39",
+    "@types/webpack": "4.4.14",
+    "@types/webpack-env": "1.13.6",
+    "ajv": "6.5.4",
     "angular-router-loader": "0.8.5",
-    "browserify": "16.2.2",
+    "browserify": "16.2.3",
     "canonical-path": "0.0.2",
     "concurrently": "3.5.1",
     "gulp": "3.9.1",
@@ -75,8 +75,8 @@
     "karma-mocha-reporter": "2.2.5",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-webpack": "3.0.0",
-    "lite-server": "2.3.0",
-    "lodash": "4.17.10",
+    "lite-server": "2.4.0",
+    "lodash": "4.17.11",
     "protractor": "5.3.1",
     "ts-loader": "5.2.1",
     "ts-node": "6.0.1",
@@ -84,9 +84,9 @@
     "tslint-loader": "3.6.0",
     "typescript": "2.8.3",
     "watchify": "3.11.0",
-    "webpack": "4.19.0",
+    "webpack": "4.20.2",
     "webpack-bundle-analyzer": "2.11.1",
-    "webpack-cli": "3.1.0",
-    "webpack-dev-middleware": "3.3.0"
+    "webpack-cli": "3.1.2",
+    "webpack-dev-middleware": "3.4.0"
   }
 }
