--- a/web-app/tds/package.json
+++ b/web-app/tds/package.json
@@ -5,8 +5,9 @@
   "description": "TDS has upgraded its base code to use Angular 5 Latest,",
   "author": "TransitionManager",
   "scripts": {
-    "build-prod": "node ./node_modules/gulp/bin/gulp.js --gulpfile ../../web-app/tds/gulpfile.js sass-compiler --PROD & node ./node_modules/webpack/bin/webpack --profile --config ../../web-app/tds/webpack-prod.config.js --env=prod",
-    "build-dev": "node ./node_modules/gulp/bin/gulp.js --gulpfile ../../web-app/tds/gulpfile.js sass-compiler & node ./node_modules/webpack/bin/webpack --profile --config ../../web-app/tds/webpack-dev.config.js",
+    "compile-css": "node ./node_modules/gulp/bin/gulp.js --gulpfile ../../web-app/tds/gulpfile.js sass-compiler --PROD & node ./node_modules/gulp/bin/gulp.js --gulpfile ../../web-app/tds/gulpfile.js sass-compiler-manager --PROD",
+    "build-prod": "npm run compile-css & node ./node_modules/webpack/bin/webpack --profile --config ../../web-app/tds/webpack-prod.config.js --env=prod",
+    "build-dev": "npm run compile-css & node ./node_modules/webpack/bin/webpack --profile --config ../../web-app/tds/webpack-dev.config.js",
     "karma-unit-test": "node ./node_modules/gulp/bin/gulp.js --gulpfile ../../web-app/tds/gulpfile.js build-test-report"
   },
   "dependencies": {
