TM-13684 - Being able to show the orange colors in the Angular Section. Also Added the initial dialog with the colors

--- a/web-app/tds/package.json
+++ b/web-app/tds/package.json
@@ -5,7 +5,7 @@
   "description": "TDS has upgraded its base code to use Angular 5 Latest,",
   "author": "TransitionManager",
   "scripts": {
-    "compile-css": "node ./node_modules/gulp/bin/gulp.js --gulpfile ../../web-app/tds/gulpfile.js sass-main-style --PROD & node ./node_modules/gulp/bin/gulp.js --gulpfile ../../web-app/tds/gulpfile.js sass-angular-compiler --PROD & node ./node_modules/gulp/bin/gulp.js --gulpfile ../../web-app/tds/gulpfile.js sass-manager-compiler --PROD",
+    "compile-css": "node ./node_modules/gulp/bin/gulp.js --gulpfile ../../web-app/tds/gulpfile.js sass-main-style --PROD & node ./node_modules/gulp/bin/gulp.js --gulpfile ../../web-app/tds/gulpfile.js sass-angular-compiler --PROD & node ./node_modules/gulp/bin/gulp.js --gulpfile ../../web-app/tds/gulpfile.js sass-manager-compiler --PROD & node ./node_modules/gulp/bin/gulp.js --gulpfile ../../web-app/tds/gulpfile.js sass-angular-manager-compiler --PROD",
     "build-prod": "npm run compile-css & node ./node_modules/webpack/bin/webpack --profile --config ../../web-app/tds/webpack-prod.config.js --env=prod",
     "build-dev": "npm run compile-css & node ./node_modules/webpack/bin/webpack --profile --config ../../web-app/tds/webpack-dev.config.js",
     "karma-unit-test": "node ./node_modules/gulp/bin/gulp.js --gulpfile ../../web-app/tds/gulpfile.js build-test-report"
