TM-13321 Moving external config to runtime.groovy so I can build the war Also set the name of the war in the build.gradle.

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ configurations {
     all*.exclude group: 'org.slf4j', module: 'slf4j-log4j12'
 }
 
+war {
+   archiveName = "tdstm.war"
+}
 
 dependencies {
 	compile "org.springframework.boot:spring-boot-starter-logging"
