--- a/src/main/webapp/tds/package.json
+++ b/src/main/webapp/tds/package.json
@@ -5,9 +5,9 @@
   "description": "TDS has upgraded its base code to use Angular 5 Latest,",
   "author": "TransitionManager",
   "scripts": {
-    "build-prod": "node ./node_modules/gulp/bin/gulp.js --gulpfile ../../web-app/tds/gulpfile.js sass-compiler --PROD & node ./node_modules/webpack/bin/webpack --profile --config ../../web-app/tds/webpack-prod.config.js --env=prod",
-    "build-dev": "node ./node_modules/gulp/bin/gulp.js --gulpfile ../../web-app/tds/gulpfile.js sass-compiler & node ./node_modules/webpack/bin/webpack --profile --config ../../web-app/tds/webpack-dev.config.js",
-    "karma-unit-test": "node ./node_modules/gulp/bin/gulp.js --gulpfile ../../web-app/tds/gulpfile.js build-test-report"
+    "build-prod": "node ./node_modules/gulp/bin/gulp.js --gulpfile ../../webapp/tds/gulpfile.js sass-compiler --PROD & node ./node_modules/webpack/bin/webpack --profile --config ../../webapp/tds/webpack-prod.config.js --env=prod",
+    "build-dev": "node ./node_modules/gulp/bin/gulp.js --gulpfile ../../webapp/tds/gulpfile.js sass-compiler & node ./node_modules/webpack/bin/webpack --profile --config ../../webapp/tds/webpack-dev.config.js",
+    "karma-unit-test": "node ./node_modules/gulp/bin/gulp.js --gulpfile ../../webapp/tds/gulpfile.js build-test-report"
   },
   "dependencies": {
     "@angular/animations": "5.2.11",
