TM-13833 Making so that we can run tests in parallel.

--- a/build.gradle
+++ b/build.gradle
@@ -203,3 +203,10 @@ gitProperties {
 grails {
    pathingJar = true
 }
+
+test {
+    if (project.hasProperty('maxParallelForks'))
+        maxParallelForks = project.maxParallelForks as int
+    if (project.hasProperty('forkEvery'))
+        forkEvery = project.forkEvery as int
+}
