TM-13791 Excluding java 1.4 bouncy castle libs and replacing PEMReader with PEMParser. This comes because of conflicts between Jasper Reports Spring Security Rest, and the PEMReader we were using in QzSignService.

--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,13 @@ repositories {
 }
 
 configurations {
-    all*.exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+	all {
+		exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+		exclude module: 'bcmail-jdk14'
+		exclude module: 'bcprov-jdk14'
+		exclude module: 'bctsp-jdk14'
+	}
+
 }
 
 dependencies {
