--- a/build.gradle
+++ b/build.gradle
@@ -124,7 +124,7 @@ dependencies {
 	compile 'org.grails.plugins:quartz:2.0.13'
 	compile 'org.grails.plugins:spring-security-core:3.2.3'
 	compile 'org.grails.plugins:spring-security-ldap:3.0.2'
-	//compile 'org.grails.plugins:greenmail:2.0.0.RC2'
+	compile 'org.grails.plugins:greenmail:2.0.0.RC2'
 
 
 	compile ('org.grails.plugins:spring-security-rest:2.0.0.RC1') {
