--- a/src/main/webapp/tds/package.json
+++ b/src/main/webapp/tds/package.json
@@ -11,50 +11,52 @@
     "karma-unit-test": "node ./node_modules/gulp/bin/gulp.js --gulpfile ../../webapp/tds/gulpfile.js build-test-report"
   },
   "dependencies": {
-    "@angular/animations": "5.2.11",
-    "@angular/common": "5.2.11",
-    "@angular/compiler": "5.2.11",
-    "@angular/core": "5.2.11",
-    "@angular/forms": "5.2.11",
-    "@angular/http": "5.2.11",
-    "@angular/platform-browser": "5.2.11",
-    "@angular/platform-browser-dynamic": "5.2.11",
-    "@angular/router": "5.2.11",
-    "@progress/kendo-angular-buttons": "4.1.3",
-    "@progress/kendo-angular-dateinputs": "3.4.4",
-    "@progress/kendo-angular-dialog": "3.7.0",
-    "@progress/kendo-angular-dropdowns": "3.0.3",
-    "@progress/kendo-angular-excel-export": "2.1.2",
-    "@progress/kendo-angular-grid": "3.7.1",
-    "@progress/kendo-angular-inputs": "3.2.1",
-    "@progress/kendo-angular-intl": "1.5.0",
-    "@progress/kendo-angular-l10n": "1.2.0",
-    "@progress/kendo-angular-layout": "3.1.2",
-    "@progress/kendo-angular-popup": "2.4.2",
-    "@progress/kendo-angular-sortable": "1.1.1",
-    "@progress/kendo-angular-upload": "4.1.4",
+    "@angular/animations": "7.2.4",
+    "@angular/common": "7.2.4",
+    "@angular/compiler": "7.2.4",
+    "@angular/core": "7.2.4",
+    "@angular/forms": "7.2.4",
+    "@angular/http": "7.2.4",
+    "@angular/platform-browser": "7.2.4",
+    "@angular/platform-browser-dynamic": "7.2.4",
+    "@angular/router": "7.2.4",
+    "@progress/kendo-angular-buttons": "4.3.3",
+    "@progress/kendo-angular-dateinputs": "3.5.4",
+    "@progress/kendo-angular-dialog": "3.10.1",
+    "@progress/kendo-angular-dropdowns": "3.4.2",
+    "@progress/kendo-angular-excel-export": "2.3.0",
+    "@progress/kendo-angular-grid": "3.12.1",
+    "@progress/kendo-angular-inputs": "3.5.0",
+    "@progress/kendo-angular-intl": "1.6.1",
+    "@progress/kendo-angular-l10n": "1.3.0",
+    "@progress/kendo-angular-layout": "3.2.0",
+    "@progress/kendo-angular-popup": "2.5.0",
+    "@progress/kendo-angular-sortable": "2.0.1",
+    "@progress/kendo-angular-upload": "4.2.2",
     "@progress/kendo-data-query": "1.5.0",
-    "@progress/kendo-drawing": "1.5.7",
-    "@progress/kendo-ooxml": "1.1.4",
-    "angular-in-memory-web-api": "0.6.1",
-    "codemirror": "5.37.0",
-    "core-js": "2.5.5",
-    "jquery": "3.3.1",
+    "@progress/kendo-drawing": "1.5.8",
+    "@progress/kendo-ooxml": "1.2.0",
+    "angular-in-memory-web-api": "0.8.0",
+    "codemirror": "5.43.0",
+    "core-js": "2.6.4",
     "jszip": "3.1.5",
-    "moment": "2.22.1",
-    "moment-timezone": "0.5.21",
+    "moment": "2.24.0",
+    "moment-timezone": "0.5.23",
     "ramda": "0.25.0",
-    "rxjs": "5.5.2",
+    "rxjs": "6.4.0",
+    "rxjs-compat": "6.4.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@progress/kendo-theme-default": "2.57.0",
-    "@types/jasmine": "2.8.8",
-    "@types/node": "10.11.4",
-    "@types/ramda": "0.25.39",
-    "@types/webpack": "4.4.14",
-    "@types/webpack-env": "1.13.6",
-    "ajv": "6.5.4",
+    "@angular/compiler-cli": "^7.2.4",
+    "@ngtools/webpack": "^7.3.1",
+    "@progress/kendo-theme-default": "3.2.0",
+    "@types/jasmine": "3.3.8",
+    "@types/node": "11.9.3",
+    "@types/ramda": "0.25.49",
+    "@types/webpack": "4.4.24",
+    "@types/webpack-env": "1.13.7",
+    "ajv": "6.9.1",
     "angular-router-loader": "0.8.5",
     "browserify": "16.2.3",
     "canonical-path": "0.0.2",
@@ -70,24 +72,23 @@
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
     "karma-html-reporter": "0.2.7",
-    "karma-jasmine": "1.1.1",
-    "karma-jasmine-html-reporter": "1.0.0",
+    "karma-jasmine": "2.0.1",
+    "karma-jasmine-html-reporter": "1.4.0",
     "karma-junit-reporter": "1.2.0",
     "karma-mocha-reporter": "2.2.5",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-webpack": "3.0.0",
     "lite-server": "2.4.0",
     "lodash": "4.17.11",
-    "protractor": "5.3.1",
-    "ts-loader": "5.2.1",
-    "ts-node": "6.0.1",
-    "tslint": "5.11.0",
-    "tslint-loader": "3.6.0",
-    "typescript": "2.8.3",
-    "watchify": "3.11.0",
-    "webpack": "4.20.2",
-    "webpack-bundle-analyzer": "2.11.1",
-    "webpack-cli": "3.1.2",
-    "webpack-dev-middleware": "3.4.0"
+    "protractor": "5.4.2",
+    "ts-loader": "5.3.3",
+    "ts-node": "8.0.2",
+    "tslint": "5.12.1",
+    "tslint-loader": "3.5.4",
+    "typescript": "3.1.1",
+    "webpack": "4.29.3",
+    "webpack-bundle-analyzer": "3.0.4",
+    "webpack-cli": "3.2.3",
+    "webpack-dev-middleware": "3.5.2"
   }
 }
