--- a/src/main/webapp/tds/package.json
+++ b/src/main/webapp/tds/package.json
@@ -66,6 +66,8 @@
     "gulp-sass": "4.0.1",
     "gulp-shell": "0.6.5",
     "gulp-sourcemaps": "2.6.4",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "3.2.0",
     "jasmine-core": "3.1.0",
     "karma": "2.0.2",
     "karma-browserify": "5.2.0",
