TM-13198 Add back vendors and make able to compile in Prod and Dev mode along with the Asset View

--- a/src/main/webapp/tds/tsconfig.json
+++ b/src/main/webapp/tds/tsconfig.json
@@ -5,9 +5,11 @@
     "module": "esnext",
     "moduleResolution": "node",
     "sourceMap": true,
+    "allowSyntheticDefaultImports": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
+    "removeComments": true,
     "lib": [
       "es2016",
       "dom"
@@ -19,5 +21,9 @@
         "node_modules/@types/ramda/index"
       ]
     }
+  },
+  "angularCompilerOptions": {
+    "annotateForClosureCompiler": false,
+    "annotationsAs": "decorators"
   }
 }
