--- a/src/main/webapp/tds/package.json
+++ b/src/main/webapp/tds/package.json
@@ -48,8 +48,8 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^7.2.4",
-    "@ngtools/webpack": "^7.3.1",
+    "@angular/compiler-cli": "7.2.6",
+    "@ngtools/webpack": "7.3.3",
     "@progress/kendo-theme-default": "3.2.0",
     "@types/jasmine": "3.3.8",
     "@types/node": "11.9.3",
