--- a/build.gradle
+++ b/build.gradle
@@ -187,7 +187,7 @@ assets {
 	minifyCss = true
 }
 
-[bootRun, integrationTest, runScript, dbmUpdate].each { runTask ->
+[bootRun, test, integrationTest, runScript, dbmUpdate].each { runTask ->
 	configure(runTask) {
 		systemProperties System.properties
 	}
