TM-10548 fixing GSPs with imports, that didn't get fixed in the refactor and only showed up in the war build.

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ apply plugin: "org.grails.grails-gsp"
 
 war {
     archiveName = "tdstm-${version}.war"
+	exclude '*/node_modules/*'
 }
 
 repositories {
